web: fix form error text not being red in dark mode

--- a/web/src/authentik.css
+++ b/web/src/authentik.css
@@ -237,7 +237,7 @@ body {
         color: var(--ak-dark-foreground);
     }
     /* inputs help text */
-    .pf-c-form__helper-text {
+    .pf-c-form__helper-text:not(.pf-m-error) {
         color: var(--ak-dark-foreground);
     }
     /* modal */
